--- a/profileCard2.html
+++ b/profileCard2.html
@@ -1,49 +1,103 @@
 <!DOCTYPE html>
 <html>
-    <head>
+
+<head>
     <meta charset="de">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>profileCard</title>
-    </head>
-    <body>
-        <article class="profile-card">
-            <!--Kopfbereich mit Hintergrundbild-->
-            <header>
+    <style>
+        body {
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            background-color: #f3f3f3;
+            font-family: 'Arial', Courier, monospace;
+            height: 100vh;
+        }
 
-            </header>
-            <!--Profilbild in figuretag-->
-            <figure class="profile-picture">
-                <img class="profile-img" src="#">
-            </figure>
-            <!--Hauptinhalt-->
-            <main>
-                <h1>Adrian Scheele</h1>
-                <p></p>
-                <!--Standort und Kontakt-->
-                <section>
-                    <span>
-                        Freiburg
-                    </span>
-                    <span>
-                        E-mail senden
-                    </span>
-                </section>
-                <!--Statistiken-->
-                <section>
-                    <div class="stat">
+        .profile-card {
+            background-color: white;
+            border-radius: 10px;
+            width: 320px;
+        }
 
-                    </div>
-                    <div class="stat">
+        .profil-img {
+            width: 320px;
+        }
 
-                    </div>
-                </section>
-            </main>
-            <!--Follow-Button-->
-            <footer class="profile-footer">
-                <div class="follow-btn">
-                    Follow
+        .profile-header {
+            height: 150px;
+            background-image: url('AdobeStock_191634678.jpeg');
+            background-size: cover;
+            background-position: center;
+            border-radius: 10px 10px 0px 0px;
+        }
+
+        .profile-picture {
+            width: 75px;
+
+        }
+
+        figure img {
+            width: 100%;
+            border-radius: 100px;
+        }
+
+        .follow-btn {
+            background-color: #04AA6D;
+            /* Green */
+            border: none;
+            color: white;
+            padding: 15px 32px;
+            width: 255px;
+            text-align: center;
+            text-decoration: none;
+            display: inline-block;
+            font-size: 16px;
+            border-radius: 0px 0px 10px 10px;
+        }
+    </style>
+
+</head>
+
+<body>
+    <article class="profile-card">
+        <!--Kopfbereich mit Hintergrundbild-->
+        <header class="profile-header"></header>
+        <!--Profilbild in figuretag-->
+        <figure class="profile-picture">
+            <img src="IMG_2634.png" alt="">
+        </figure>
+        <!--Hauptinhalt-->
+        <main>
+            <h1>Adrian Scheele</h1>
+            <p>Desinger, Webdeveloper,Katzenliebhaber</p>
+            <!--Standort und Kontakt-->
+            <section>
+                <span>
+                    Freiburg
+                </span>
+                <span>
+                    E-mail senden
+                </span>
+            </section>
+            <!--Statistiken-->
+            <section>
+                <div class="stat">
+
                 </div>
-            </footer>
-        </article>
-    </body>
+                <div class="stat">
+
+                </div>
+            </section>
+        </main>
+        <!--Follow-Button-->
+        <footer class="profile-footer">
+            <div class="follow-btn">
+                Follow
+            </div>
+        </footer>
+    </article>
+</body>
+
 </html>
