--- a/profileCard2.html
+++ b/profileCard2.html
@@ -19,6 +19,7 @@
             background-color: white;
             border-radius: 10px;
             width: 320px;
+            text-align: center;
         }
 
         .profil-img {
@@ -33,16 +34,35 @@
             border-radius: 10px 10px 0px 0px;
         }
 
-        .profile-picture {
-            width: 75px;
-
+        figure.profile-picture {
+            margin: -50px auto 0;
+            /*(oben rechts unten links)*/
+              /*(oben unten)(rechts links)*/
+            /*(oben)(rechts links)(unten)*/
         }
 
 
         
-        figure img {
-            width: 100%;
-            border-radius: 100px;
+        .profile-img {
+            width: 100px;
+            height: 100px;
+            border-radius: 50%;
+            border: 4px solid #f3f3f3;
+            object-fit: cover;
+        }
+
+        .container-follow{
+            display: flex;
+            flex-direction: row;
+            justify-content: space-evenly;
+            background-color: #f1f1f1;
+            margin-top: 10px;
+
+        }
+
+        .stat {
+            padding: 20px;
+           
         }
 
         .follow-btn {
@@ -68,7 +88,7 @@
         <header class="profile-header"></header>
         <!--Profilbild in figuretag-->
         <figure class="profile-picture">
-            <img src="IMG_2634.png" alt="">
+            <img src="IMG_2634.png" alt="" class="profile-img">
         </figure>
         <!--Hauptinhalt-->
         <main>
@@ -84,12 +104,12 @@
                 </span>
             </section>
             <!--Statistiken-->
-            <section>
+            <section class="container-follow">
                 <div class="stat">
-
+                    8,100 Followers
                 </div>
                 <div class="stat">
-
+                    3,650 Following
                 </div>
             </section>
         </main>
